Fix controller issues
